    changesets instead of having a special-case wrapper around it
    (fileChangeSet())
  * The commitaction script and the changemail module did not necessarily
    show the full trailing version for branches and shadows.  (For example,
    /conary.rpath.com@rpl:devel/4.1.25-18/db41/19 showed up as "19"
    instead of "4.1.25-19".)

Changes in 0.61.6:
  * InitialContents turns off EtcConfig, since a file cannot be both
    a config file and an InitialContents file.
  * Reworked repository change sets to directly reference files from the
    contents store.
  * The User() command now takes an optional supplemental= option,
    which provides a list of supplemental groups to which to add
    the user.  (SupplementalGroup() is for groups not associated
    with a user.)
  * The showcs command can now handle components that are referenced
    but not included in a changeset.
  * InfoUserRecipe and InfoGroupRecipe can now be built with buildlogging
    turned on.
  * Conary's internal handling for dyanamically finding new IDs for
    users and groups has been fixed.
  * "conary updateall" now accepts the --test flag.
  * Various fixes were made to the CIL dependency detection code.

Changes in 0.61.5:
  * Added basic clone capability (which only works cloning to parents
    branches and shadows, and on a single host).
  * Now handles degenerate case of packaging unreadable files.
  * A bug that caused conary to ask for the wrong fileId when constructing
    a changeset from multiple repositores has been fixed.
  * Conary now can add users and groups automatically at install time.  If
    there is no taghandler to add a user or a group, conary will add it
    internally as a bootstrapping measure; if there is a taghandler,
    conary will call that instead.  In order to ease transition, Conary
    does not yet create the dependencies on the info- packages; a future
    version of Conary will add those dependencies after the system user